fix: setting dialog should allow scroll when overflow

--- a/packages/userscript/src/ui/Dialog.css
+++ b/packages/userscript/src/ui/Dialog.css
@@ -17,6 +17,7 @@
     width: 90vw;
     max-width: 450px;
     max-height: 85vh;
+    overflow-y: auto;
     padding: 16px 24px;
     z-index: 1001;
     animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
